lib/src/third_party/grpc_support/generated_bindings.dart


  late final _bidirectional_stream_engine_createPtr = _lookup<
      ffi.NativeFunction<
          ffi.Pointer<stream_engine> Function(
              ffi.Uint8,
              ffi.Pointer<ffi.Char>,
              ffi.Uint8,
              ffi.Uint8,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.UnsignedChar>,
              ffi.Int)>>('bidirectional_stream_engine_create');
  late final _bidirectional_stream_engine_create =
      _bidirectional_stream_engine_createPtr.asFunction<
          ffi.Pointer<stream_engine> Function(
              int,
              ffi.Pointer<ffi.Char>,
              int,
              int,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.UnsignedChar>,
              int)>();

  void bidirectional_stream_engine_destroy(
    ffi.Pointer<stream_engine> s_engine,
  ) {
    return _bidirectional_stream_engine_destroy(
      s_engine,
    );
  }

  late final _bidirectional_stream_engine_destroyPtr = _lookup<
          ffi.NativeFunction<ffi.Void Function(ffi.Pointer<stream_engine>)>>(
      'bidirectional_stream_engine_destroy');
  late final _bidirectional_stream_engine_destroy =
      _bidirectional_stream_engine_destroyPtr
          .asFunction<void Function(ffi.Pointer<stream_engine>)>();
}

class max_align_t extends ffi.Opaque {}

/// Opaque object representing a Bidirectional stream creating engine. Created
/// and configured outside of this API to facilitate sharing with other
/// components
class stream_engine extends ffi.Struct {
  external ffi.Pointer<ffi.Void> obj;

  external ffi.Pointer<ffi.Void> annotation;
}

/// Opaque object representing Bidirectional Stream.
class bidirectional_stream extends ffi.Struct {
  external ffi.Pointer<ffi.Void> obj;

  external ffi.Pointer<ffi.Void> annotation;
}

/// A single request or response header element.
class bidirectional_stream_header extends ffi.Struct {
  external ffi.Pointer<ffi.Char> key;

  external ffi.Pointer<ffi.Char> value;
}

/// Array of request or response headers or trailers.
class bidirectional_stream_header_array extends ffi.Struct {
  @ffi.Size()
  external int count;

  @ffi.Size()
  external int capacity;

  external ffi.Pointer<bidirectional_stream_header> headers;
}

/// Set of callbacks used to receive callbacks from bidirectional stream.
class bidirectional_stream_callback extends ffi.Struct {
  /// Invoked when the stream is ready for reading and writing.
  /// Consumer may call bidirectional_stream_read() to start reading data.
  /// Consumer may call bidirectional_stream_write() to start writing
  /// data.
  external ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<bidirectional_stream>)>>
      on_stream_ready;

  /// Invoked when initial response headers are received.
  /// Consumer must call bidirectional_stream_read() to start reading.
  /// Consumer may call bidirectional_stream_write() to start writing or
  /// close the stream. Contents of |headers| is valid for duration of the call.
  external ffi.Pointer<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<bidirectional_stream>,
              ffi.Pointer<bidirectional_stream_header_array>,
              ffi.Pointer<ffi.Char>)>> on_response_headers_received;

  /// Invoked when data is read into the buffer passed to
  /// bidirectional_stream_read(). Only part of the buffer may be
  /// populated. To continue reading, call bidirectional_stream_read().
  /// It may be invoked after on_response_trailers_received()}, if there was
  /// pending read data before trailers were received.
  ///
  /// If |bytes_read| is 0, it means the remote side has signaled that it will
  /// send no more data; future calls to bidirectional_stream_read()
  /// will result in the on_data_read() callback or on_succeded() callback if
  /// bidirectional_stream_write() was invoked with end_of_stream set to
  /// true.
  external ffi.Pointer<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<bidirectional_stream>,
              ffi.Pointer<ffi.Char>, ffi.Int)>> on_read_completed;

  /// Invoked when all data passed to bidirectional_stream_write() is
  /// sent. To continue writing, call bidirectional_stream_write().
  external ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(
                  ffi.Pointer<bidirectional_stream>, ffi.Pointer<ffi.Char>)>>
      on_write_completed;

  /// Invoked when trailers are received before closing the stream. Only invoked
  /// when server sends trailers, which it may not. May be invoked while there is
  /// read data remaining in local buffer. Contents of |trailers| is valid for
  /// duration of the call.
  external ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<bidirectional_stream>,
                  ffi.Pointer<bidirectional_stream_header_array>)>>
      on_response_trailers_received;

  /// Invoked when there is no data to be read or written and the stream is
  /// closed successfully remotely and locally. Once invoked, no further callback
  /// methods will be invoked.
  external ffi.Pointer<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<bidirectional_stream>)>> on_succeded;

  /// Invoked if the stream failed for any reason after
  /// bidirectional_stream_start(). HTTP/2 error codes are
  /// mapped to chrome net error codes. Once invoked, no further callback methods
  /// will be invoked.
  external ffi.Pointer<
          ffi.NativeFunction<
              ffi.Void Function(ffi.Pointer<bidirectional_stream>, ffi.Int)>>
      on_failed;

  /// Invoked if the stream was canceled via
  /// bidirectional_stream_cancel(). Once invoked, no further callback
  /// methods will be invoked.
  external ffi.Pointer<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<bidirectional_stream>)>> on_canceled;
}

const int NULL = 0;

const int true1 = 1;

const int false1 = 0;

const int __bool_true_false_are_defined = 1;
